--- a/src/Pages/Shop/Shop.scss
+++ b/src/Pages/Shop/Shop.scss
@@ -8,6 +8,7 @@
     .filter-section {
         display: flex;
         align-items: center;
+        justify-content: space-around;
         width: 337px;
         margin: 50px auto 100px;
         padding: 10px;
@@ -15,13 +16,22 @@
         box-shadow: 0 4px 18px rgba(26, 26, 26, 0.1);
 
         input {
-            outline: 0;
             border: none;
             border-right: 1px solid black;
+            border-radius: 0;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            outline: none;
         }
 
         select {
             border: none;
+            width: 50px;
+            background-color: transparent;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
         }
     }
 
